# open-sight

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: copy_src.rs  helpers.rs  main.rs
