[package]
authors = ["Alan Wilter <alanwilter@gmail.com>"]
description = "A CLI tool for crawling DICOM and Crystal-Eye files and extracting metadata to a CSV file"
name = "OpenSight"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/pontikos-lab/OpenSight"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "crawler"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "open-sight"
path = "src/main.rs"

[[bin]]
name = "copy_src"
path = "src/copy_src.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
rayon = "1.10.0"
walkdir = "2.5.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
sysinfo = "0.35.2"
dicom-object = "0.8.1"
dicom-dictionary-std = "0.8.0"
glob = "0.3.2"
kdam = "0.6.3"
duckdb = { version = "1.3.1", features = ["bundled"] }
tqdm = "0.7.0"
tempfile = "3.20.0"
serde_json = "1.0.140"
